# resume-maker

./: .env.example  .gitignore  Dockerfile  README.md  app.py  database.py  main.py  pyproject.toml  requirements.txt  resume.db  resume.py  start.sh
.github/workflows/: sync-to-hf.yml
.streamlit/: config.toml
prompts/: cover_letter.py  resume_tailor.py
src/: api.py  database.py  frontend.py  resume_processor.py
src/prompts/: cover_letter.py  resume_tailor.py
