[project]
name = "resume-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.100.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "pypdf2>=3.0.0",
    "pypdfium2>=4.0.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.30.0",
    "uvicorn>=0.23.0",
]
